--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -12,6 +12,9 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item" id="admin" style="display: none;">
+                        <a class="nav-link" href="/admin">Admin</a>
+                    </li>
                     <li class="nav-item" id="orders" style="display: none;">
                         <a class="nav-link" href="/meus-pedidos">Meus pedidos</a>
                     </li>
