--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,6 +143,7 @@
                     </div>
                 </section>
             <% } %>
+        </div>
 
         <!-- Rodapé  -->
         <footer id="footer">
